<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height">

    <Button
        android:id="@+id/wifi_on"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:drawableStart="@drawable/icon_wifi_white"
        android:drawableLeft="@drawable/icon_wifi_white"
        android:text="@string/wifi_on"
        android:textAllCaps="false"
        android:textColor="#232429"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
        app:layout_constraintEnd_toStartOf="@+id/center_vertical_guide"
        app:layout_constraintStart_toStartOf="@+id/start_guide" />

    <Button
        android:id="@+id/mobile_on"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:drawableStart="@drawable/icon_four_g"
        android:drawableLeft="@drawable/icon_four_g"
        android:text="@string/mobile"
        android:textAllCaps="false"
        android:textColor="#232429"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
        app:layout_constraintEnd_toEndOf="@+id/end_guide"
        app:layout_constraintStart_toEndOf="@+id/center_vertical_guide" />

    <Button
        android:id="@+id/airplane_off"
        style="@style/roundedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:drawableStart="@drawable/icon_airplane_off"
        android:drawableLeft="@drawable/icon_airplane_off"
        android:text="@string/airplane"
        android:textAllCaps="false"
        android:textColor="#232429"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
        app:layout_constraintEnd_toEndOf="@+id/end_guide"
        app:layout_constraintStart_toStartOf="@+id/start_guide" />

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/moon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_marginBottom="@dimen/margin_xxxxx_large"
            android:scaleType="centerInside"
            android:src="@drawable/icon_sun"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_small"
            android:src="@drawable/icon_cancel_white_24dp" />

        <ImageView
            android:id="@+id/plane"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/margin_medium"
            android:scaleType="fitStart"
            android:src="@drawable/plane1" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ghost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_small"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_small"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guide" />

    <ImageView
        android:id="@+id/tomb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guide" />

    <ImageView
        android:id="@+id/wifi_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:alpha="0.5"
        android:scaleType="centerInside"
        android:src="@drawable/icon_no_wifi"
        app:layout_constraintBottom_toBottomOf="@+id/tomb"
        app:layout_constraintEnd_toEndOf="@+id/tomb"
        app:layout_constraintStart_toStartOf="@+id/tomb"
        app:layout_constraintTop_toTopOf="@+id/tomb" />

    <ProgressBar
        android:id="@+id/wifi_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_internet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:text="@string/no_internet_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/end_guide"
        app:layout_constraintStart_toStartOf="@+id/start_guide"
        app:layout_constraintTop_toBottomOf="@+id/tomb" />

    <TextView
        android:id="@+id/no_internet_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:text="@string/no_internet_body"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/end_guide"
        app:layout_constraintStart_toStartOf="@+id/start_guide"
        app:layout_constraintTop_toBottomOf="@+id/no_internet" />

    <TextView
        android:id="@+id/turn_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:alpha="0.7"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/turn_on"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/wifi_on"
        app:layout_constraintEnd_toEndOf="@+id/end_guide"
        app:layout_constraintStart_toStartOf="@+id/start_guide" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical_guide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
