<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpink"
    android:tag="layout/activity_makecall_new_0">


    <RelativeLayout
        android:id="@+id/RLMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/content1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/centerImage"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_centerInParent="true"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="mcallback.json"
                            app:lottie_loop="true" />

                        <RelativeLayout
                            android:id="@+id/ads"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="250dp">

                            <FrameLayout
                                android:id="@+id/mobadslayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerInParent="true"
                                android:background="@color/white"
                                android:orientation="vertical" />


                        </RelativeLayout>
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/txtConnect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/content1"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="@string/click_to_make_call"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtConnect"
                        android:layout_above="@+id/termcondition"
                        android:gravity="center"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:id="@+id/imgBtnMakeCall"
                            android:layout_width="270dp"
                            android:layout_height="60dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/border_ten"
                            android:elevation="5dp">

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/icon_videocall"
                                android:backgroundTint="@color/black" />

                            <TextView
                                android:id="@+id/start"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:layout_marginRight="30dp"
                                android:layout_toLeftOf="@+id/image"
                                android:fontFamily="@font/montserrat_bold"
                                android:gravity="center"
                                android:text="@string/random_call_1"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/imgBtnMakeCall2"
                            android:layout_width="250dp"
                            android:layout_height="60dp"
                            android:background="@drawable/border_ten"
                            android:elevation="5dp">

                            <ImageView
                                android:id="@+id/image2"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/icon_videocall"
                                android:backgroundTint="@color/black" />

                            <TextView
                                android:id="@+id/start2"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerHorizontal="true"
                                android:layout_marginRight="30dp"
                                android:layout_toLeftOf="@+id/image2"
                                android:fontFamily="@font/montserrat_bold"
                                android:gravity="center"
                                android:text="@string/random_call_2"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/termcondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/by_using_live_video_call_chat_you_must_agree_with_our_terms_conditions_try_to_keep_your_face_visible_violators_of_terms_will_be_permanently_blocked"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/privacypolicy"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:background="@drawable/icon_make_call"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/privacy_policy" />


                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewNew1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_centerHorizontal="true"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp">

                    <com.airbnb.lottie.LottieAnimationView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="mcallback.json"
                        app:lottie_loop="true" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/txtConnect2"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="Call End"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/txtConnect2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/RLButtonContainer"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/txtConnect3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="Connecting..."
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/RLButtonContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="100dp">

                        <RelativeLayout
                            android:id="@+id/addContact"
                            android:layout_width="100dp"
                            android:layout_height="150dp"
                            android:layout_gravity="bottom|left|center_vertical|center_horizontal|center"
                            android:layout_marginLeft="50dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="100dp"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="35dp"
                                    android:adjustViewBounds="false"
                                    android:background="@drawable/icon_cut_call"
                                    android:padding="10dp"
                                    android:src="@drawable/icon_close_black_24dp" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="bottom"
                                android:layout_marginTop="8dp"
                                android:text="Back"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/imgBtnMakeCal2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="right|center_vertical|center_horizontal|center"
                            android:layout_marginRight="50dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/lottie_view"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="8dp"
                                app:lottie_autoPlay="true"
                                app:lottie_fileName="calling.json"
                                app:lottie_loop="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="bottom"
                                android:text="Call Again"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</RelativeLayout>
